<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/share_mirror_settings_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/share_mirror_settings_title"
        style="@style/SettingsSectionLabelStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_mirror_settings" />

    <RelativeLayout
        android:id="@+id/share_mirror_settings_holder"
        style="@style/SettingsHolderTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/share_mirror_settings_message"
            style="@style/SettingsTextLabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_mirror_settings_description" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/share_mirror_settings_qr_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:contentDescription="@string/qr_code"
        android:background="@android:color/white"
        android:scaleType="fitCenter" />

</LinearLayout>
